--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "glob": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.14.2",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
